[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/instanced/projectiles/projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/sprites/sprite_circle.gd" type="Script" id=2]
[ext_resource path="res://src/pixel_snap.gd" type="Script" id=3]
[ext_resource path="res://src/effect/projectile/projectile_flame.gd" type="Script" id=4]
[ext_resource path="res://src/physics_interpolator_2d.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 0.0

[node name="FlameForce" instance=ExtResource( 1 )]
collision_mask = 35
script = ExtResource( 4 )
duration = 0.125
speed = 600.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="PhysicsInterpolator2D" type="Node2D" parent="." index="1"]
script = ExtResource( 5 )

[node name="PixelSnap" type="Node2D" parent="PhysicsInterpolator2D" index="0"]
show_behind_parent = true
script = ExtResource( 3 )

[node name="SpriteCircle" type="Node2D" parent="PhysicsInterpolator2D/PixelSnap" index="0"]
show_behind_parent = true
script = ExtResource( 2 )
radius = 12.0
color = Color( 1, 0.211765, 0, 1 )
